--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Saeed Abdul-Wahab" />
     <meta name="description" content=" A Pay-As-You-Earn Tax Calculator for Ghanaians">
-    <meta property="og:image" content="%PUBLIC_URL%/gh.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/ghana.png">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
